@@ -1,3 +1,5 @@
+* Do not make gtk and tryton required even when using screenshots
+
 Version 0.6: 2014-10-18
 * Fix screenshot bug: allow to generate more than 3 screenshots
 * Fix screenshot bug: show icons correctly
